2006-09-13  Per Bothner  <per@bothner.com>

	* KProcessingInstruction.java (getNodeType): Fix cut-and-paste error.

	* Document.java (close): New method.
	* KNode.java (toString): Add missing close call on XMLPrinter.

	* XMLParser.java (parseCached): Add missing close call on XMLParser.

2006-08-18  Per Bothner  <per@bothner.com>

	* XTimeType.java (now): New method.

2006-08-17  Per Bothner  <per@bothner.com>

	* ProcessingInstructionType.java (coerceMethod): Fix thinko.

2006-06-28  Per Bothner  <per@bothner.com>

	* NodeName.java: Update SName -> Symbol.
	* MakeElement.java: Likewise.
	* AttributeType.java (make, isInstance, coerceOrNull): Partial rewrite
	due to removla of SName class.
	* ElementType.java (make, isInstance, coerceOrNull): Likewise.
	(MATCH_ANY_LOCALNAM, MATCH_ANY_QNAME): New constant fields.

2006-06-27  Per Bothner  <per@bothner.com>

	* XDataType.java (getConstructor): New method.
	* ElementType.java (getConstructor): New method.
	* NodeType.java (getConstructor): New method.

	* OutputAsXML.java: Change implementation so it returns an FString
	value.  Alas, we lose some optimization.

2006-06-16  Per Bothner  <per@bothner.com>

	* MakeElement.java: Add support for interpreting keyword parameters
	as attribute constructors.
	(tag): New field.
	* Nodes.java (inAttribute): New field.
	(beginAttribute): Set it.
	(endAttribute): Ignore if inAttribute not set.

2006-03-27  Per Bothner  <per@bothner.com>

	* BinaryObject.java: New abstract class.
	* Base64Binary.java: New class, extends BinaryObject.
	* HexBinary.java: New class, extends BinaryObject.
	* Makefile.am: Update accordingly.
	* XDataType.java (base64BinaryType, hexBinaryType): New static fields.
	(cast, valueOf): Add support for new types.
	(parseHexBinary): Remove method - now in HexBinary.java.

	* XDataType.java (decimalType): Change implementation type to
	java.lang.Number.

2006-03-26  Per Bothner  <per@bothner.com>
